sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: not found: value cart
		  cart=(ecart.asInstanceOf[Double]/1.3).asInstanceOf[Int]      
                  ^