sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var taille=getNombreValeurs()
  var trier=true
  var ecart=getNombreValeurs()
  
  while (ecart>1 || trier){
    if(ecart<1){
		  cart=(ecart.asInstanceOf[Double]/1.3).asInstanceOf[Int]      
    }
    trier=false
    
    
    var i =0
   
    while (i+ecart< taille ){
      if (plusPetit(i+ecart,i)==true){
        echange(i+ecart,i)
        trier=true
      }
    i=i+1
    }
    
  }
  
}